# advent-of-code-2024

./: LICENSE  advent-of-code2024.cabal
common/Advent/: Coord.hs  List.hs
execs/: Day01.hs  Day02.hs  Day03.hs  Day04.hs  Day05.hs  Day06.hs  Day07.hs  Day08.hs  Day09.hs  Day10.hs  Day11.hs  Day12.hs  Day13.hs  Day14.hs  Day15.hs  Day16.hs  Day21.hs  Day24.hs  Day25.hs
