cabal-version:      3.0
name:               advent-of-code2024
version:            0.0.0.0
synopsis:           https://adventofcode.com/2024
description:        Advent of Code 2024 solutions
homepage:           https://github.com/mrtnpaolo/advent-of-code-2024
license:            MIT
license-file:       LICENSE
author:             Paolo Martini
maintainer:         mrtnpaolo@protonmail.com
copyright:          2024 Paolo Martini
bug-reports:        https://github.com/mrtnpaolo/advent-of-code-2024/issues
build-type:         Simple
data-files:         inputs/*

common warnings
    ghc-options: -Wall
                 -Wno-unused-imports
                 -Wno-incomplete-patterns
                 -Wno-incomplete-uni-patterns
                 -Wno-missing-signatures
                 -Wno-type-defaults
                 -Wno-x-partial
                 -Wno-name-shadowing

common extensions
    default-extensions: PartialTypeSignatures
                        ImportQualifiedPost
                        TypeApplications
                        PatternSynonyms
                        ViewPatterns
                        BlockArguments
                        LambdaCase
                        RecordWildCards
                        ParallelListComp

library
    import:             warnings
    import:             extensions
    exposed-modules:    Advent
                      , Advent.Coord
                      , Advent.Input
                      , Advent.Search
                      , Advent.Chinese
                      , Advent.List
                      , Advent.Memo
    other-modules:      Advent.Deque
                      , Advent.PQueue
    build-depends:      base
                      , array
                      , containers
                      , MemoTrie
    hs-source-dirs:     common
    default-language:   GHC2021

common day
    import:             warnings
    import:             extensions
    build-depends:      advent-of-code2024
                      , base
                      , array
                      , split
                      , containers
    hs-source-dirs:     execs
    default-language:   GHC2021

executable Day01
    import:             day
    main-is:            Day01.hs

executable Day02
    import:             day
    main-is:            Day02.hs

executable Day03
    import:             day
    main-is:            Day03.hs

executable Day04
    import:             day
    main-is:            Day04.hs

executable Day05
    import:             day
    main-is:            Day05.hs

executable Day06
    import:             day
    main-is:            Day06.hs

executable Day07
    import:             day
    main-is:            Day07.hs

executable Day08
    import:             day
    main-is:            Day08.hs

executable Day09
    import:             day
    main-is:            Day09.hs

executable Day10
    import:             day
    main-is:            Day10.hs

executable Day11
    import:             day
    main-is:            Day11.hs

executable Day12
    import:             day
    main-is:            Day12.hs

executable Day13
    import:             day
    main-is:            Day13.hs

executable Day14
    import:             day
    main-is:            Day14.hs

executable Day15
    import:             day
    main-is:            Day15.hs

executable Day21
    import:             day
    main-is:            Day21.hs

executable Day24
    import:             day
    main-is:            Day24.hs

executable Day25
    import:             day
    main-is:            Day25.hs
